name:                example-dot-org
version:             0.1.0.0
synopsis:            an example clckwrks site
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

source-repository head
    type:     darcs
    subdir:   example-dot-org
    location: http://hub.darcs.net/stepcut/clckwrks

Executable             example-dot-org-server
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -with-rtsopts=-I0
  build-depends:       base                     > 4 && <5,
                       clckwrks                 >= 0.13 && < 0.15,
                       clckwrks-theme-bootstrap == 0.2.*,
                       containers               == 0.4.*,
                       happstack-server         >= 7.0 && < 7.2,
                       hsp                      == 0.7.*,
                       mtl                      >= 2.0 && < 2.2,
                       text                     == 0.11.*,
                       web-plugins              == 0.1.*
