name:                example-dot-org
version:             0.1.0.0
synopsis:            an example clckwrks site
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Custom
cabal-version:       >=1.8

source-repository head
    type:     darcs
    subdir:   example-dot-org
    location: http://hub.darcs.net/stepcut/clckwrks

Executable             example-dot-org-server
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -with-rtsopts=-I0
  build-tools:         hsx2hs
  build-depends:       base                     > 4 && <5,
                       clckwrks                 >= 0.21 && < 0.22,
                       clckwrks-theme-bootstrap == 0.3.*,
                       clckwrks-plugin-page     >= 0.3.0 && < 0.4,
                       containers               >= 0.4 && < 0.6,
                       happstack-server         >= 7.0 && < 7.4,
                       hsp                      >= 0.9 && < 0.11,
                       mtl                      >= 2.0 && < 2.2,
                       text                     >= 0.11 && < 1.1,
                       web-plugins              == 0.2.*
