name:                example-dot-org
version:             0.1.0.0
synopsis:            an example clckwrks site
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

source-repository head
    type:     git
    location: git://github.com/clckwrks/example-dot-org.git

Executable             example-dot-org-server
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -with-rtsopts=-I0
  build-depends:       base                     > 4      && < 5,
                       clckwrks                 >= 0.23  && < 0.28,
                       clckwrks-theme-bootstrap == 0.4.*,
                       clckwrks-plugin-page     >= 0.3.0 && < 0.5,
                       containers               >= 0.4   && < 0.7,
                       happstack-server         >= 7.0   && < 7.8,
                       hsp                      >= 0.9   && < 0.11,
                       mtl                      >= 2.0   && < 2.3,
                       text                     >= 0.11  && < 2.1,
                       web-plugins              >= 0.2   && < 0.5
